<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
    			android:orientation="vertical"
    			android:layout_width="fill_parent"
    			android:layout_height="fill_parent">
    	
   	   	<TextView 
   	   			android:text="@string/new_user" 
   	   			android:id="@+id/new_user_label" 
   	   			android:layout_width="wrap_content" 
   	   			android:layout_height="wrap_content"
   	   			android:layout_marginTop="50dip"
   	   			android:layout_gravity="center"
   	   			android:textSize="20dip">
   	   	</TextView>
    		   	
       	<TableLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:stretchColumns="*" 
				android:layout_marginTop="10dip">
		<TableRow>
			<TextView
				android:id="@+id/username_label"
				android:text="@string/username"
				 />
			<EditText
				android:id="@+id/username_signup_field" 
				android:width="150sp" 
				android:editable="false"
				android:cursorVisible="false"
				android:layout_height="40dip" />
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/password_label"
				android:text="@string/password" />
			<EditText
				android:id="@+id/password_signup_field"
				android:width="150sp" 
				android:editable="false"
				android:cursorVisible="false"
				android:layout_height="40dip" />
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/confirm_password_label"
				android:text="@string/confirm_password" />
			<EditText
				android:id="@+id/confirm_password_field"
				android:width="150sp" 
				android:editable="false"
				android:cursorVisible="false"
				android:layout_height="40dip" />
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/email_address_label"
				android:text="@string/email_address" />
			<EditText
				android:id="@+id/email_address_field"
				android:width="150sp" 
				android:editable="false"
				android:cursorVisible="false"
				android:layout_height="40dip" />
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/password_label"
				android:text="@string/password" />
			<EditText
				android:id="@+id/password_signup_field"
				android:width="150sp" 
				android:editable="false"
				android:cursorVisible="false"
				android:layout_height="40dip" />
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/phone_number_label"
				android:text="@string/phone_number" />
			<EditText
				android:id="@+id/phone_number_field"
				android:width="150sp" 
				android:editable="false"
				android:cursorVisible="false"
				android:layout_height="40dip" />
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/credit_card_number_label"
				android:text="@string/credit_card_number" />
			<EditText
				android:id="@+id/credit_card_number_field"
				android:width="150sp" 
				android:editable="false"
				android:cursorVisible="false"
				android:layout_height="40dip" />
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/cvv2_code"
				android:text="@string/cvv2_code" />
			<EditText
				android:id="@+id/cvv2_code_field"
				android:width="150sp" 
				android:editable="false"
				android:cursorVisible="false"
				android:layout_height="40dip" />
		</TableRow>
	</TableLayout>
   	<Button 	android:id="@+id/signup_enterData_button" 
   				android:layout_height="wrap_content" 
   				android:layout_width="match_parent" 
   				android:text="@string/signup"
   				android:layout_marginTop="10dip">
   	</Button>
</LinearLayout>
