<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
    			android:layout_width="wrap_content" 
    			android:layout_height="wrap_content" 
    			android:orientation="vertical">
    			
    <ImageView 	 
    			android:id="@+id/amride_logo" 
    			android:src="@drawable/amride" 
    			android:layout_width="match_parent"
    			android:layout_height="50dip"/>
    			
    <TextView 	android:id="@+id/sign_in_label" 
    			android:textAppearance="?android:attr/textAppearanceMedium" 
    			android:layout_width="wrap_content" 
    			android:layout_height="wrap_content"
    			android:layout_marginTop="50dip" 
    			android:text="@string/sign_in"
    			android:layout_gravity="center">
    </TextView>
    			
   <TableLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:stretchColumns="*" 
				android:layout_marginTop="30dip">
				
		<TableRow>
			<TextView
				android:id="@+id/username_label"
				android:text="@string/username"
				android:layout_marginLeft="5dip"
				android:textSize="17dip" />
			<EditText
				android:id="@+id/username_login_field" 
				android:width="200sp" />
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/password_label"
				android:text="@string/password" 
				android:layout_marginLeft="5dip"
				android:textSize="17dip"/>
			<EditText
				android:id="@+id/password_login_field"
				android:width="200sp" />
				
		</TableRow>
	</TableLayout>
   	<CheckBox 
   				android:id="@+id/remember_me" 
   				android:layout_width="wrap_content" 
   				android:layout_height="wrap_content"
   				android:layout_marginLeft="100dip" 
   				android:text="@string/remember_me">
   	</CheckBox>
	<Button 	
   				android:id="@+id/login_button" 
   				android:layout_height="wrap_content" 
   				android:layout_width="match_parent" 
   				android:text="@string/login"
   				android:layout_marginTop="30dip"
   				android:layout_marginLeft="80dip"
   				android:layout_marginRight="80dip">
   	</Button>
   	<Button 	
   				android:id="@+id/signup_button" 
   				android:layout_height="wrap_content" 
   				android:layout_width="match_parent"
   				android:layout_marginLeft="80dip"
   				android:layout_marginRight="80dip" 
   				android:text="@string/signup">
   	</Button>	
</LinearLayout>
