<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  	xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_height="fill_parent"
				android:layout_width="fill_parent"  
    			android:orientation="vertical">
    			
	<TableLayout 
    			android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:stretchColumns="*">
		<TableRow >
			<ImageView   
				android:id="@+id/amride_icon"
				android:layout_width="70dip"
				android:layout_height="43dip" 
				android:src="@drawable/amride">
			</ImageView>
			<Button 
				android:text="@string/logout"
				android:id="@+id/logout_button"/>
		</TableRow>		
	</TableLayout>
	
		<com.google.android.maps.MapView 
       			android:id="@+id/mapView"
       			android:layout_width="match_parent"
       			android:layout_height="wrap_content"
       			android:clickable="true"
        		android:apiKey="0TWRhH49E2G5ERXgaP3ESawWcTqAaqfSxKOipug"
        	/>
   		<Button 
   				android:id="@+id/Submit_Source_Button" 
   				android:layout_height="wrap_content" 
   				android:layout_width="match_parent" 
   				android:text="@string/submit_source">
   		</Button>
    
  		<EditText
				android:id="@+id/Geolocation" 
				android:layout_width="fill_parent" 
		/>
    
    	
    
	
	
	<TableLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:stretchColumns="*" 
				android:layout_marginTop="1dip">
		<TableRow>
				<Button android:text="@string/book_a_driver"
						android:id="@+id/book_a_driver_button"
						android:layout_width="90dip"/>
				<Button android:text="@string/my_account"
						android:layout_width="90dip"/>
				<Button android:text="@string/call_us"
						android:layout_width="90dip"/>
		</TableRow> 
	</TableLayout>
</LinearLayout>
